consent cookie popup visibility fixed

--- a/css/main.css
+++ b/css/main.css
@@ -304,7 +304,7 @@ header .mouse-wheel {
 }
 
 #consent-popup.hidden {
-    opacity: 0;
+    visibility: hidden;
 }
 
 #accept {
